--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Static/Levels/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/Dynamic/Levels/FirstPersonExampleMap.FirstPersonExampleMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Static/Levels/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/Dynamic/Levels/FirstPersonExampleMap.FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Dynamic/InfiniteTerrainGameMode.InfiniteTerrainGameMode_C
 GlobalDefaultServerGameMode=None
@@ -47,6 +47,9 @@ CategorySlot7=Seven
 CategorySlot8=Eight
 CategorySlot9=Nine
 ActivationKey=Backslash
+
+[/Script/Engine.RecastNavMesh]
+RuntimeGeneration=Dynamic
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
