--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,6 +107,9 @@ RuntimeGeneration=Dynamic
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/AIModule.AISystem]
+bAllowControllersAsEQSQuerier=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
